update documentation, change route names

--- a/app/components/au-contact-form.hbs
+++ b/app/components/au-contact-form.hbs
@@ -1,5 +1,5 @@
 <form class="au-c-form js-formvalidation-bound">
-  <div class="au-u-margin-bottom">
+  <div class="au-u-margin-bottom-small">
     <AuLabel for="select" class="au-u-margin-bottom-small">Waar gaat uw bericht over?</AuLabel>
     <ul class="au-c-list">
       <li class="au-c-list__item">
