--- a/app/templates/contact.hbs
+++ b/app/templates/contact.hbs
@@ -8,6 +8,9 @@
         <AuHeading class="au-u-margin-bottom">Contact</AuHeading>
         {{contact-form}}
         <AuContactForm/>
+        <AuContent class="au-u-margin-top-large">
+          <p>Of neem rechtstreeks contact op via mail <a href="mailto:toevla@inter.vlaanderen" class="au-c-link">toevla@inter.vlaanderen</a>.</p>
+        </AuContent>
       </div>
     </section>
   </main>
