--- a/app/templates/ontwikkelaars.hbs
+++ b/app/templates/ontwikkelaars.hbs
@@ -24,17 +24,17 @@
         <div class="au-o-grid__item au-u-1-4@medium">
           <ul class="au-c-list-navigation">
             <li class="au-c-list-navigation__item">
-              <AuNavigationLink @linkRoute="developers.intro">
+              <AuNavigationLink @linkRoute="ontwikkelaars.intro">
                 Widget integreren
               </AuNavigationLink>
             </li>
             <li class="au-c-list-navigation__item">
-              <AuNavigationLink @linkRoute="developers.styling">
+              <AuNavigationLink @linkRoute="ontwikkelaars.styling">
                 Stijl aanpassen
               </AuNavigationLink>
             </li>
             <li class="au-c-list-navigation__item">
-              <AuNavigationLink @linkRoute="developers.plaatsing">
+              <AuNavigationLink @linkRoute="ontwikkelaars.plaatsing">
                 Plaatsing van de widget
               </AuNavigationLink>
             </li>
@@ -62,7 +62,7 @@
                 </AuHeading>
                 <p class="au-u-margin-top-tiny">Een overzicht van de gebouwen waarvoor er toegankelijkheidsinformatie beschikbaar is.</p>
                 <p>
-                  <LinkTo @route="locaties" class="au-c-button">
+                  <LinkTo @route="gebouwen" class="au-c-button">
                     Zoek een gebouw
                   </LinkTo>
                 </p>
