--- a/app/templates/gebouwen.hbs
+++ b/app/templates/gebouwen.hbs
@@ -24,7 +24,7 @@
         <div class="au-o-grid__item au-u-1-4@medium">
           <ul class="au-c-list-navigation">
             <li class="au-c-list-navigation__item">
-              <AuNavigationLink @linkRoute="locaties">
+              <AuNavigationLink @linkRoute="gebouwen">
                 Musea
               </AuNavigationLink>
             </li>
@@ -74,11 +74,11 @@
               <AuBadge @icon="users" @skin="brand" class="au-u-margin-right-none au-u-margin-bottom-small" />
               <AuContent>
                 <AuHeading @level="2" @skin="4">
-                  Voor developers
+                  Voor ontwikkelaars
                 </AuHeading>
                 <p class="au-u-margin-top-tiny">Hier vind je meer informatie over hoe je de widget kan integreren in je website.</p>
                 <p>
-                  <LinkTo @route="developers.intro" class="au-c-button au-c-button--secondary">
+                  <LinkTo @route="ontwikkelaars.intro" class="au-c-button au-c-button--secondary">
                     Handleiding
                   </LinkTo>
                 </p>
