--- a/app/templates/login.hbs
+++ b/app/templates/login.hbs
@@ -48,9 +48,9 @@
           <div class="au-o-grid__item au-u-2-3@medium au-u-2-4@large au-c-hero__usp">
             <AuHeading @skin="1" class="au-u-margin-bottom">Toegankelijk Vlaanderen</AuHeading>
             <p class="au-c-intro">
-              Toegankelijk Vlaanderen helpt u om burgers te informeren over <strong>de toegankelijkheid van uw gebouw</strong>.
+              Toegankelijk Vlaanderen helpt u om de toegankelijkheid van uw locatie beter in de verf zetten en om de burgers <strong>correct te informeren</strong> over de status van de toegankelijkheid van uw gebouw.
             </p>
-            <p class="au-c-intro">
+            <p class="au-c-para">
               We verzamelen informatie over uw gebouw en bieden deze aan als een makkelijk te integreren <strong>widget</strong> of als <strong>gelinkte open data</strong> via de API.
             </p>
             <p class="au-c-para au-u-margin-top">
@@ -117,10 +117,10 @@
           <div class="au-o-grid__item au-u-1-2@medium">
             <AuContent @skin="large">
               <h2 class="au-c-heading au-c-heading--3">Widget</h2>
-              <p>U kan onze widget makkelijk integreren in uw website. Zo kunnen uw bezoekers steeds de meest actuele toegankelijkheidsinformatie meegeven.</p>
+              <p>U kan onze widget makkelijk integreren in uw website. Zo kan u de bezoekers steeds de meest actuele toegankelijkheidsinformatie meegeven.</p>
               <ul class="au-u-margin-top-small">
                 <li>We verzamelen informatie rond een vast aantal punten en geven deze weer in een overzichtelijke lijst.</li>
-                <li>Bekijk de toegankelijke eigenschappen van een locatie aan de hand van foto's.</li>
+                <li>We tonen foto’s die de toegankelijkheid van de locatie illustreren.</li>
               </ul>
               <p>
                 <LinkTo @route="ontwikkelaars.intro" class="au-c-link">
