--- a/app/templates/ontwikkelaars/intro.hbs
+++ b/app/templates/ontwikkelaars/intro.hbs
@@ -9,7 +9,7 @@
 </script>'
 @language="html" />
 
-<AuHeading @level="3" @skin="3">2. Vervang code de identificatie code</AuHeading>
+<AuHeading @level="3" @skin="3">2. Vervang de identificatie code</AuHeading>
 <p>Zoek op deze <LinkTo @route="gebouwen" class="au-c-link">overzichtpagina</LinkTo> de identificatie code van uw gebouw.</p>
 
 <p>Zet uw identificatie code op de juiste plaats in de widget code. U plaatst deze onder <CodeInline @code='data-resource=""' @language="html" />. De waarde is een combinatie van <CodeInline @code='http://toevla.org/id/' @language="html" /> + <strong>uw locatie identificatie code</strong>.</p>
