--- a/app/templates/ontwikkelaars/plaatsing.hbs
+++ b/app/templates/ontwikkelaars/plaatsing.hbs
@@ -9,7 +9,7 @@
 <p>Als uw pagina reeds een pagina over toegankelijkheid hebt controleer u best even de correctheid van de informatie. Het kan zeer verwarrend overkomen indien de info op uw pagina de widget informatie tegenspreekt. We streven ernaar om steeds de meest correct info te geven. Indien u toch een fout zou vinden in de widget kan u deze steeds doorgeven op <a href="mailto:toevla@inter.vlaanderen" class="au-c-link">toevla@inter.vlaanderen</a>.</p>
 
 <AuHeading @level="3" @skin="3">Controleer op dubbele informatie</AuHeading>
-<p>Met de widget geven we je een makkelijk overzicht van alle meetpunten rond toegankelijkheid. Het is dus niet nodig om deze nog eens te herhalen op je site. U kan wel altijd een kort overzicht of visie tekst op deze pagina plaatsen om uw engagement rond toegankelijkheid duidelijk te maken.</p>
+<p>Met de widget geven we je een makkelijk overzicht van alle meetpunten rond toegankelijkheid. Het is dus niet nodig om deze nog eens te herhalen op je site. U kan wel altijd een kort overzicht of visie tekst op deze pagina plaatsen om de toegankelijkheids-‘troeven’ van de locatie samen te vatten en/of uw engagement rond toegankelijkheid duidelijk te maken. </p>
 
 <AuHeading @level="3" @skin="3">Zorg voor een duidelijke navigatielink</AuHeading>
 <p>Het is belangrijk dat er een bezoeker van je site de pagina over toeganklijkheid makkelijk kan vinden. Plaats deze link zichtbaar in uw hoofdnavigatie of footernavigatie.</p>
