--- a/app/templates/ontwikkelaars/plaatsing.hbs
+++ b/app/templates/ontwikkelaars/plaatsing.hbs
@@ -2,7 +2,7 @@
 
 <p>Om de vindbaarheid en het gebruiksgemak te verhogen promoten we volgende regels:</p>
 
-<AuHeading @level="3" @skin="3">Zet bij voorkeur je toegankelijkheidsinformatie onder <CodeInline @code='/toegankelijkheid' @language="html" /></AuHeading>
+<AuHeading @level="3" @skin="3">Zet je toegankelijkheidsinformatie onder <CodeInline @code='/toegankelijkheid' @language="html" /></AuHeading>
 <p>Om de vindbaarheid van informatie over toegankelijkheid makkelijker te maken is het goed om deze altijd onder de <CodeInline @code='/toegankelijkheid' @language="html" /> pagina te plaatsen op uw website. Zo creëren we samen een makkelijk vindbare locatie op je site.</p>
 
 <AuHeading @level="3" @skin="3">Controleer op tegenstrijdige informatie</AuHeading>
