--- a/app/templates/developers/intro.hbs
+++ b/app/templates/developers/intro.hbs
@@ -6,11 +6,11 @@
   id="toevla-widget"
   data-resource="http://toevla.org/id/[id van uw gebouw]"
   src="https://embed-dev.toevla.org/assets/js/toevla-widget.js">
-</script>'
-@language="html" />
+  </script>'
+  @language="html" />
 
 <AuHeading @level="3" @skin="3">2. Vervang de identificatie code</AuHeading>
-<p>Zoek op deze <LinkTo @route="gebouwen" class="au-c-link">overzichtpagina</LinkTo> de identificatie code van uw gebouw.</p>
+<p>Zoek op deze <LinkTo @route="buildings" class="au-c-link">overzichtpagina</LinkTo> de identificatie code van uw gebouw.</p>
 
 <p>Zet uw identificatie code op de juiste plaats in de widget code. U plaatst deze onder <CodeInline @code='data-resource=""' @language="html" />. De waarde is een combinatie van <CodeInline @code='http://toevla.org/id/' @language="html" /> + <strong>uw locatie identificatie code</strong>.</p>
 
@@ -24,10 +24,10 @@
   data-widget-check="#0E5EB8"
   data-widget-link="#0E5EB8"
   data-widget-link-hover="#0F6FD7">
-</script>'
-@language="html" />
+  </script>'
+  @language="html" />
 
-<p>Meer info over de <LinkTo @route="ontwikkelaars.styling" class="au-c-link">mogelijkheden om de widget stijl aan te passen.</LinkTo></p>
+<p>Meer info over de <LinkTo @route="developers.styling" class="au-c-link">mogelijkheden om de widget stijl aan te passen.</LinkTo></p>
 
 <AuHeading @level="3" @skin="3">4. Zet de widget code op de juiste pagina</AuHeading>
 <p>Om de vindbaarheid en het gebruiksgemak te verhogen promoten we volgende regels:</p>
@@ -37,7 +37,7 @@
   <li>controleer of informatie niet onnodig herhaald wordt</li>
   <li>zorg ervoor dat er een duidelijke navigatielink is naar de pagina over toegankelijkheid</li>
 </ul>
-<p>Meer info over een correcte <LinkTo @route="ontwikkelaars.plaatsing" class="au-c-link">plaatsing van de widget</LinkTo></p>
+<p>Meer info over een correcte <LinkTo @route="developers.plaatsing" class="au-c-link">plaatsing van de widget</LinkTo></p>
 
 <AuHeading @level="3" @skin="3">Vragen of hulp nodig?</AuHeading>
 <p>Indien u problemen tegenkomt bij het implementeren van de widget kan u ons contacteren op <a href="mailto:toevla@inter.vlaanderen" class="au-c-link">toevla@inter.vlaanderen</a></p>
