--- a/app/templates/login.hbs
+++ b/app/templates/login.hbs
@@ -54,7 +54,7 @@
               We verzamelen informatie over uw gebouw en bieden deze aan als een makkelijk te integreren <strong>widget</strong> of als <strong>gelinkte open data</strong> via de API.
             </p>
             <p class="au-c-para au-u-margin-top">
-              <LinkTo @route="gebouwen" class="au-c-button au-c-button--large au-u-margin-bottom-small">
+              <LinkTo @route="buildings" class="au-c-button au-c-button--large au-u-margin-bottom-small">
                 <AuIcon @icon="arrow-right" @size="large" @alignment="left" /> Zoek een gebouw
               </LinkTo>
             </p>
@@ -123,7 +123,7 @@
                 <li>We tonen foto’s die de toegankelijkheid van de locatie illustreren.</li>
               </ul>
               <p>
-                <LinkTo @route="ontwikkelaars.intro" class="au-c-link">
+                <LinkTo @route="developers.intro" class="au-c-link">
                   Lees meer over hoe u deze widget kan integreren
                 </LinkTo>
               </p>
@@ -172,7 +172,7 @@
                 </AuHeading>
                 <p class="au-u-margin-top-tiny">Een overzicht van de gebouwen waarvoor er toegankelijkheidsinformatie beschikbaar is.</p>
                 <p>
-                  <LinkTo @route="gebouwen" class="au-c-button">
+                  <LinkTo @route="buildings" class="au-c-button">
                     Zoek een gebouw
                   </LinkTo>
                 </p>
@@ -188,7 +188,7 @@
                 </AuHeading>
                 <p class="au-u-margin-top-tiny">Hier vind u meer informatie over hoe u de widget kan integreren in uw website.</p>
                 <p>
-                  <LinkTo @route="ontwikkelaars.intro" class="au-c-button au-c-button--secondary">
+                  <LinkTo @route="developers.intro" class="au-c-button au-c-button--secondary">
                     Handleiding
                   </LinkTo>
                 </p>
