First efforts towards criterion selection and rendering
There are more criteria to support, but the PoC approach has proven
we're on the right track.

--- a/app/components/edit-components/boolean.hbs
+++ b/app/components/edit-components/boolean.hbs
@@ -46,3 +46,11 @@
     <AuButton @loading="true">Opslaan</AuButton>
   </chart.if>
 </WithStatechart>
+
+<div>
+  {{#if this.currentValue}}
+    <Labels::String @value={{this.args.treeNode.firstLabel}} />
+  {{else}}
+    <Labels::String @value={{this.args.treeNode.secondLabel}} />
+  {{/if}}
+</div>
