--- a/app/components/edit-components/area.hbs
+++ b/app/components/edit-components/area.hbs
@@ -41,3 +41,10 @@
     <AuButton @loading="true">Opslaan</AuButton>
   </chart.if>
 </WithStatechart>
+
+<Criteria::SelectCriterion
+  @value={{parse-int this.currentValue}}
+  @treeNode={{this.args.treeNode}}
+  as |label|>
+  {{label}}
+</Criteria::SelectCriterion>
