--- a/app/components/edit-components/centimeters.hbs
+++ b/app/components/edit-components/centimeters.hbs
@@ -26,3 +26,16 @@
   </chart.if>
   {{yield (hash reset=(fn chart.send "RESET"))}}
 </WithStatechart>
+
+<div>
+  {{#let (parse-int this.currentValue) as |parsedValue|}}
+    <Criteria::SelectCriterion
+      @value={{parsedValue}}
+      @treeNode={{this.args.treeNode}}
+      as |label|>
+      <Labels::NumericString
+        @label={{label}}
+        @value={{parsedValue}} />
+    </Criteria::SelectCriterion>
+  {{/let}}
+</div>
