--- a/app/components/edit-components/meters.hbs
+++ b/app/components/edit-components/meters.hbs
@@ -25,3 +25,16 @@
     <AuButton @loading="true">Opslaan</AuButton>
   </chart.if>
 </WithStatechart>
+
+<div>
+  {{#let (parse-int this.currentValue) as |parsedValue|}}
+    <Criteria::SelectCriterion
+      @value={{parsedValue}}
+      @treeNode={{this.args.treeNode}}
+      as |label|>
+      <Labels::NumericString
+        @label={{label}}
+        @value={{parsedValue}} />
+    </Criteria::SelectCriterion>
+  {{/let}}
+</div>
