Matching and entry for area
Noticing some changes in how it should perhaps be interpreted.  This
might thus be a starting point which will will be refined.

--- a/app/components/edit-components/area.hbs
+++ b/app/components/edit-components/area.hbs
@@ -42,9 +42,15 @@
   </chart.if>
 </WithStatechart>
 
-<Criteria::SelectCriterion
-  @value={{parse-int this.currentValue}}
-  @treeNode={{this.args.treeNode}}
-  as |label|>
-  {{label}}
-</Criteria::SelectCriterion>
+<div>
+  {{#let (array (parse-int this.width) (parse-int this.height)) as |parsedValue|}}
+    <Criteria::SelectAreaCriterion
+      @value={{parsedValue}}
+      @treeNode={{this.args.treeNode}}
+      as |label|>
+      <Labels::AreaString
+        @label={{label}}
+        @value={{parsedValue}} />
+    </Criteria::SelectAreaCriterion>
+  {{/let}}
+</div>
