Hide link to standalone widget
We will not provide a link to the standalone widget right now, hence
we'll hide the option from the page.

--- a/app/templates/buildings.hbs
+++ b/app/templates/buildings.hbs
@@ -53,9 +53,9 @@
                       </p>
                     </AuToolbarGroup>
                   </AuToolbar>
-                  <AuContent class="au-o-box au-o-box--small">
-                    <p><a href="#!" class="au-c-link">Bekijk de widget (@TODO: link toevoegen)</a></p>
-                  </AuContent>
+                  <!-- <AuContent class="au-o-box au-o-box--small">
+                       <p><a href="#!" class="au-c-link">Bekijk de widget (@TODO: link toevoegen)</a></p>
+                       </AuContent> -->
                 </article>
               </li>
             {{/each}}
