--- a/app/templates/buildings.hbs
+++ b/app/templates/buildings.hbs
@@ -35,20 +35,20 @@
             <p>De volgende musea hebben toegankelijkheidsinformatie:</p>
           </AuContent>
           <ul class="au-o-grid au-o-grid--tiny">
-            {{#each @model as |poi|}}
+            {{#each @model as |widget|}}
               <li class="au-o-grid__item">
                 <article class="au-c-card">
                   <AuToolbar @border="bottom" @size="small">
                     <AuToolbarGroup>
                       <AuHeading @level="2" @skin="4">
-                        {{poi.label}}
+                        {{widget.pointOfInterest.label}}
                       </AuHeading>
                     </AuToolbarGroup>
                     <AuToolbarGroup>
                       <p>
                         Identificatiecode:
                         <AuPill>
-                          {{poi.uri}}
+                          {{widget.uri}}
                         </AuPill>
                       </p>
                     </AuToolbarGroup>
