New format of widget
The new format of the widget should make things clearer for
end-users.  Still need to replace in other locations too.

--- a/app/templates/developers/intro.hbs
+++ b/app/templates/developers/intro.hbs
@@ -3,10 +3,9 @@
 
 <AuHeading @level="3" @skin="3">1. Kopieer de widget code naar de plaats op de pagina waar u de widget wil weergeven</AuHeading>
 <CodeBlock @code='<script
-  id="toevla-widget"
-  data-resource="http://toevla.org/id/[id van uw gebouw]"
-  src="https://embed-dev.toevla.org/assets/js/toevla-widget.js">
-  </script>'
+  src="https://qa.toegankelijk.vlaanderen.be/widget.js"
+  resource="[uri voor jouw gebouw-widget]"
+  typeof="http://data.toegankelijk.vlaanderen.be/ns/Widget" />'
   @language="html" />
 
 <AuHeading @level="3" @skin="3">2. Vervang de identificatie code</AuHeading>
