Update snippet code
The snippet code has been updated to be in line with RDFa standards.
It looks a lot more obvious right now, and doesn't force the use of an
ID anymore.  Nice!

--- a/app/templates/developers/styling.hbs
+++ b/app/templates/developers/styling.hbs
@@ -2,14 +2,14 @@
 <p>U kan een aantal design elementen (kleuren, typografie) aanpassen door deze mee te geven in de widget code.</p>
 
 <CodeBlock @code='<script
-  id="toevla-widget"
-  data-resource="http://toevla.org/id/[id van jouw locatie]"
-  src="https://embed-dev.toevla.org/assets/js/toevla-widget.js"
+  src="https://qa.toegankelijk.vlaanderen.be/widget.js"
+  resource="[uri voor jouw gebouw-widget]"
+  typeof="http://data.toegankelijk.vlaanderen.be/ns/Widget" />
   data-widget-check="#0E5EB8"
   data-widget-link="#0E5EB8"
   data-widget-link-hover="#0F6FD7">
-</script>'
-@language="html" />
+  </script>'
+  @language="html" />
 
 <p>Hieronder vind u een lijst met properties die aanpasbaar zijn:</p>
 <ul>
