--- a/app/templates/developers/intro.hbs
+++ b/app/templates/developers/intro.hbs
@@ -11,15 +11,15 @@
 <AuHeading @level="3" @skin="3">2. Vervang de identificatie code</AuHeading>
 <p>Zoek op deze <LinkTo @route="buildings" class="au-c-link">overzichtpagina</LinkTo> de identificatie code van uw gebouw.</p>
 
-<p>Zet uw identificatie code op de juiste plaats in de widget code. U plaatst deze onder <CodeInline @code='data-resource=""' @language="html" />. De waarde is een combinatie van <CodeInline @code='http://toevla.org/id/' @language="html" /> + <strong>uw locatie identificatie code</strong>.</p>
+<p>Zet uw identificatie code op de juiste plaats in de widget code. U plaatst deze onder <CodeInline @code='resource=""' @language="html" />. De waarde is een combinatie van <CodeInline @code='http://data.toegankelijk.vlaanderen.be/id/widgets/' @language="html" /> + <strong>een unieke identificatie code</strong>.</p>
 
 <AuHeading @level="3" @skin="3">3. Pas indien gewenst de stijl van de widget aan</AuHeading>
 <p>U kan een aantal design elementen (kleuren, typografie) aanpassen door deze mee te geven in de widget code.</p>
 
 <CodeBlock @code='<script
-  id="toevla-widget"
-  data-resource="http://toevla.org/id/[id van jouw locatie]"
-  src="https://embed-dev.toevla.org/assets/js/toevla-widget.js"
+  src="https://qa.toegankelijk.vlaanderen.be/widget.js"
+  resource="[uri voor jouw gebouw-widget]"
+  typeof="http://data.toegankelijk.vlaanderen.be/ns/Widget" />
   data-widget-check="#0E5EB8"
   data-widget-link="#0E5EB8"
   data-widget-link-hover="#0F6FD7">
