Temporarily disable login button
Disabling the login button for now.  We'll enable it again once we
set up ACM/IDM.

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,7 +1,10 @@
 <AuMainHeader @homeRoute="login" @appTitle="Toegankelijk Vlaanderen" @contactRoute="contact">
-  <LinkTo @route="poi" role="menuitem" class="au-c-button au-c-button--tertiary">
+  {{!-- <LinkTo @route="poi" role="menuitem" class="au-c-button au-c-button--tertiary">
+       <AuIcon @icon="login" @alignment="left" />Aanmelden
+       </LinkTo> --}}
+  <span role="menuitem"  class="au-c-button au-c-button--tertiary">
     <AuIcon @icon="login" @alignment="left" />Aanmelden
-  </LinkTo>
+  </span>
 </AuMainHeader>
 
 <main class="au-c-main-container" id="main">
