update widget code

--- a/app/templates/developers/intro.hbs
+++ b/app/templates/developers/intro.hbs
@@ -5,7 +5,7 @@
 <CodeBlock @code='<script
   src="https://qa.toegankelijk.vlaanderen.be/widget.js"
   resource="[uri voor jouw gebouw-widget]"
-  typeof="http://data.toegankelijk.vlaanderen.be/ns/Widget" />'
+  typeof="http://data.toegankelijk.vlaanderen.be/ns/Widget"></script>'
   @language="html" />
 
 <AuHeading @level="3" @skin="3">2. Vervang de resource URI</AuHeading>
@@ -22,7 +22,7 @@
   typeof="http://data.toegankelijk.vlaanderen.be/ns/Widget"
   data-widget-check="#0E5EB8"
   data-widget-link="#0E5EB8"
-  data-widget-link-hover="#0F6FD7" />'
+  data-widget-link-hover="#0F6FD7"></script>'
   @language="html" />
 
 <p>Meer info over de <LinkTo @route="developers.styling" class="au-c-link">mogelijkheden om de widget stijl aan te passen.</LinkTo></p>
