--- a/app/templates/developers/styling.hbs
+++ b/app/templates/developers/styling.hbs
@@ -7,7 +7,7 @@
   typeof="http://data.toegankelijk.vlaanderen.be/ns/Widget"
   data-widget-check="#0E5EB8"
   data-widget-link="#0E5EB8"
-  data-widget-link-hover="#0F6FD7" />'
+  data-widget-link-hover="#0F6FD7"></script>'
   @language="html" />
 
 <p>Hieronder vind u een lijst met properties die aanpasbaar zijn:</p>
