--- a/app/templates/experience/edit/tree-node.hbs
+++ b/app/templates/experience/edit/tree-node.hbs
@@ -29,6 +29,10 @@
         <AuLabel for="score">Score</AuLabel>
         <AuInput id="score" @value={{this.currentScore}} @placeholder="Brons" />
       </p>
+      <p>
+        <AuLabel for="comment">Comment</AuLabel>
+        <AuInput id="comment" @value={{this.comment}} @placeholder="Brons" />
+      </p>
       <AuButton type="submit" {{on "click" this.submit}}>Instellen</AuButton>
     </form>
 
