--- a/app/templates/experience/show/tree/edit.hbs
+++ b/app/templates/experience/show/tree/edit.hbs
@@ -32,10 +32,13 @@
         <AuLabel for="score">Score</AuLabel>
         <AuInput id="score" @value={{this.currentScore}} @placeholder="Brons" />
       </p>
+      <p>
+        <AuLabel for="comment">Comment</AuLabel>
+        <AuInput id="comment" @value={{this.currentComment}} @placeholder="" />
+      </p>
       <AuButton type="submit" {{on "click" this.submit}}>Instellen</AuButton>
     </form>
 
   </div>
 
 </div>
-
