update styling documentation

--- a/app/templates/developers/styling.hbs
+++ b/app/templates/developers/styling.hbs
@@ -5,22 +5,22 @@
   src="https://qa.toegankelijk.vlaanderen.be/widget.js"
   resource="[uri voor jouw gebouw-widget]"
   typeof="http://data.toegankelijk.vlaanderen.be/ns/Widget"
-  data-widget-check="#0E5EB8"
-  data-widget-link="#0E5EB8"
-  data-widget-link-hover="#0F6FD7"></script>'
+  data-style-check="#0E5EB8"
+  data-style-link="#0E5EB8"
+  data-style-link-hover="#0F6FD7"></script>'
   @language="html" />
 
 <p>Hieronder vind u een lijst met properties die aanpasbaar zijn:</p>
 <ul>
-  <li><CodeInline @code='data-widget-font="BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif"'/>: font family</li>
-  <li><CodeInline @code='data-bold="700"'/>: bold font gewicht</li>
-  <li><CodeInline @code='data-medium="600"'/>: medium font gewicht</li>
-  <li><CodeInline @code='data-regular="500"'/>: regular font gewicht</li>
-  <li><CodeInline @code='data-check="#0E5EB8"'/>: check/icoon kleur (HEX kleur waarde)</li>
-  <li><CodeInline @code='data-link="#0E5EB8"'/>: link kleur (HEX kleur waarde)</li>
-  <li><CodeInline @code='data-link-hover="#0F6FD7"'/>: link hover kleur (HEX kleur waarde)</li>
-  <li><CodeInline @code='data-error="#D92626"'/>: foutmelding kleur (HEX kleur waarde)</li>
-  <li><CodeInline @code='data-outline="#FFC515"'/>: focus outline kleur (HEX kleur waarde)</li>
+  <li><CodeInline @code='data-style-font="BlinkMacSystemFont, Segoe UI, Roboto, Helvetica, Arial, sans-serif"'/>: font family</li>
+  <li><CodeInline @code='data-style-bold="700"'/>: bold font gewicht</li>
+  <li><CodeInline @code='data-style-medium="600"'/>: medium font gewicht</li>
+  <li><CodeInline @code='data-style-regular="500"'/>: regular font gewicht</li>
+  <li><CodeInline @code='data-style-check="#0E5EB8"'/>: check/icoon kleur (HEX kleur waarde)</li>
+  <li><CodeInline @code='data-style-link="#0E5EB8"'/>: link kleur (HEX kleur waarde)</li>
+  <li><CodeInline @code='data-style-link-hover="#0F6FD7"'/>: link hover kleur (HEX kleur waarde)</li>
+  <li><CodeInline @code='data-style-error="#D92626"'/>: foutmelding kleur (HEX kleur waarde)</li>
+  <li><CodeInline @code='data-style-outline="#FFC515"'/>: focus outline kleur (HEX kleur waarde)</li>
 </ul>
 
 <AuHeading @level="3" @skin="3">Vragen of hulp nodig?</AuHeading>
