--- a/app/templates/developers/intro.hbs
+++ b/app/templates/developers/intro.hbs
@@ -20,9 +20,9 @@
   src="https://qa.toegankelijk.vlaanderen.be/widget.js"
   resource="[uri voor jouw gebouw-widget]"
   typeof="http://data.toegankelijk.vlaanderen.be/ns/Widget"
-  data-widget-check="#0E5EB8"
-  data-widget-link="#0E5EB8"
-  data-widget-link-hover="#0F6FD7"></script>'
+  data-style-check="#0E5EB8"
+  data-style-link="#0E5EB8"
+  data-style-link-hover="#0F6FD7"></script>'
   @language="html" />
 
 <p>Meer info over de <LinkTo @route="developers.styling" class="au-c-link">mogelijkheden om de widget stijl aan te passen.</LinkTo></p>
