--- a/app/components/tree-components/experience.hbs
+++ b/app/components/tree-components/experience.hbs
@@ -6,7 +6,7 @@
     @disableHandlerComponent={{true}}
     class="au-c-tree__item au-c-tree__item--child">
 
-    <LinkTo class="au-c-tree__edit" @route="experience.show.tree.edit" @models={{array @experience.id child.id}}>
+    <LinkTo class="au-c-tree__edit" @route="experience.show.tree.edit" @models={{array experience.id @node.id}}>
       <AuIcon @icon="pencil" />
       <span class="au-c-tree__edit-label">Aanpassen</span>
     </LinkTo>
