--- a/app/templates/experience/show/tree/edit.hbs
+++ b/app/templates/experience/show/tree/edit.hbs
@@ -25,6 +25,10 @@
 
     {{outlet}}
 
+    <div>
+      <strong>Type</strong> {{@model.treeNode.criterionType}}
+    </div>
+
     <hr class="au-c-hr">
 
     <form {{on "submit" this.submit}} class="au-c-form">
