Trivial implementation of location strings
The location now has a trivial implementation.  This implementation
shows how to fetch and set locations in the most trivial manner.
Should be sufficient for a first approach.

--- a/app/templates/poi/new.hbs
+++ b/app/templates/poi/new.hbs
@@ -30,6 +30,11 @@
             <AuInput id="addpoi" type="text" @value={{this.label}} @width="block" @placeholder="Museum M" />
           </p>
 
+          <p>
+            <AuLabel for="edit">Address</AuLabel>
+            <AuInput @width="block" id="edit" @type="string" @value={{this.locationString}} />
+          </p>
+
           <p class="au-u-margin-top-small">
             <AuButton type="submit">Voeg toe</AuButton>
           </p>
