--- a/app/templates/poi/edit.hbs
+++ b/app/templates/poi/edit.hbs
@@ -30,6 +30,11 @@
           <AuInput @width="block" id="edit" @type="string" @value={{this.model.label}} />
         </p>
 
+        <p>
+          <AuLabel for="edit">Address</AuLabel>
+          <AuInput @width="block" id="edit" @type="string" @value={{this.model.locationString}} />
+        </p>
+
         <AuButtonGroup class="au-u-margin-top-small">
           <AuButton type="submit">Opslaan</AuButton>
         </AuButtonGroup>
