--- a/app/templates/experience/show/tree/edit.hbs
+++ b/app/templates/experience/show/tree/edit.hbs
@@ -47,6 +47,23 @@
       <AuButton type="submit" {{on "click" this.submit}}>Instellen</AuButton>
     </form>
 
+    <hr class="au-c-hr" />
+
+    <div class="au-c-upload-box">
+      <AuHeading @level="2" @skin="5" class="au-u-margin-bottom-small">Foto's</AuHeading>
+      <VoMuFileDropzone @onFinishUpload={{this.uploaded}} @maxFileSizeMB="1024" @queueName="madIsTheBest" />
+      <ul class="au-o-grid au-o-grid--tiny au-u-margin-bottom-none">
+        {{#each this.model.scoring.images as |image|}}
+          <li class="au-o-grid__item au-u-1-3 au-u-1-4@small au-u-1-6@medium">
+            <VoMuFileCard @file={{image}} @onDelete={{fn this.removeFile image}} class="au-c-upload__file">
+              <img src="/images/{{image.id}}?height={{100}}" alt="{{image.label}}"/>
+            </VoMuFileCard>
+          </li>
+        {{/each}}
+      </ul>
+    </div>
+
+
   </div>
 
 </div>
