Use boolean-criterion for inline score calculation
This criterion was not used in the template, making content like
"undefined" to ripple through to the interface.

--- a/app/components/edit-components/boolean.hbs
+++ b/app/components/edit-components/boolean.hbs
@@ -48,9 +48,9 @@
 </WithStatechart>
 
 <div>
-  {{#if this.currentValue}}
-    <Labels::String @value={{this.args.treeNode.firstLabel}} />
-  {{else}}
-    <Labels::String @value={{this.args.treeNode.secondLabel}} />
-  {{/if}}
+  <Criteria::SelectBooleanCriterion @treeNode={{@treeNode}} @value={{this.currentValue}} as |label check score|>
+    {{#if label}}
+      <Labels::String @value={{label}} />
+    {{/if}}
+  </Criteria::SelectBooleanCriterion>
 </div>
