Update to Dutch labels

--- a/app/templates/experience/edit/index.hbs
+++ b/app/templates/experience/edit/index.hbs
@@ -1,6 +1,6 @@
 <form {{on "submit" this.submit}}>
   <p>
-    <AuLabel for="editevent">Name</AuLabel>
+    <AuLabel for="editevent">Naam</AuLabel>
     <AuInput @width="block" id="editevent" @type="string" @value={{@model.title}} />
   </p>
 
