--- a/app/templates/poi/new.hbs
+++ b/app/templates/poi/new.hbs
@@ -31,7 +31,7 @@
           </p>
 
           <p>
-            <AuLabel for="edit">Address</AuLabel>
+            <AuLabel for="edit">Adres</AuLabel>
             <AuInput @width="block" id="edit" @type="string" @value={{this.locationString}} />
           </p>
 
