Remove dead code

--- a/app/templates/experience/edit/tree-node.hbs
+++ b/app/templates/experience/edit/tree-node.hbs
@@ -37,7 +37,7 @@
         <AuLabel for="comment">Comment</AuLabel>
         <AuInput id="comment" @value={{this.comment}} @placeholder="Brons" />
       </p>
-      <AuButton type="submit" {{on "click" this.submit}}>Instellen</AuButton>
+      <AuButton type="submit">Instellen</AuButton>
     </form>
 
 
