Use subject instead of experience as argument
The subject may contain either an Experience or a PointOfInterest.
This is a solid step towards abstracting the entity on which we define
the final score.

--- a/app/components/tree-components/experience.hbs
+++ b/app/components/tree-components/experience.hbs
@@ -1,7 +1,7 @@
-{{#each @experience.pointOfInterest.experiences as |experience|}}
+{{#each @subject.pointOfInterest.experiences as |experience|}}
   <Tree::Node
     @node={{@node}}
-    @experience={{experience}}
+    @subject={{experience}}
     @title={{concat "Beleving - " experience.title}}
     @disableHandlerComponent={{true}}
     class="au-c-tree__item au-c-tree__item--child">
