--- a/app/templates/experience/show/tree/edit.hbs
+++ b/app/templates/experience/show/tree/edit.hbs
@@ -19,7 +19,7 @@
            key=this.extendedEditInfo.key
            conceptScheme=this.extendedEditInfo.conceptScheme
            treeNode=@model.treeNode
-           experience=@model.experience
+           subject=@model.experience
            as |events|}}
         <span {{did-update events.reset @model.treeNode}}></span>
       {{/component}}
