--- a/app/templates/experience/show/tree.hbs
+++ b/app/templates/experience/show/tree.hbs
@@ -10,7 +10,7 @@
     <div class="au-o-grid__item au-u-3-5 au-u-2-3@medium">
       <ul class="au-c-tree">
         {{#each this.sortedNodes as |node|}}
-          <Tree::Node @node={{node}} @experience={{this.experience}} class="au-c-tree__item" />
+          <Tree::Node @node={{node}} @experience={{this.mainExperience}} class="au-c-tree__item" />
         {{/each}}
 
         {{#async-await this.experience.pointOfInterest as |poi|}}
