make comment input wider

--- a/app/templates/experience/edit/tree-node.hbs
+++ b/app/templates/experience/edit/tree-node.hbs
@@ -35,7 +35,7 @@
       </p>
       <p>
         <AuLabel for="comment">Comment</AuLabel>
-        <AuInput id="comment" @value={{this.comment}} @placeholder="Brons" />
+        <AuInput @width="block" id="comment" @value={{this.comment}} @placeholder="Brons" />
       </p>
       <AuButton type="submit">Instellen</AuButton>
     </form>
