--- a/app/templates/experience/show/tree/edit.hbs
+++ b/app/templates/experience/show/tree/edit.hbs
@@ -44,7 +44,7 @@
       </p>
       <p>
         <AuLabel for="comment">Comment</AuLabel>
-        <AuInput id="comment" @value={{this.currentComment}} @placeholder="" />
+        <AuInput @width="block" id="comment" @value={{this.currentComment}} @placeholder="" />
       </p>
       <AuButton type="submit" {{on "click" this.submit}}>Instellen</AuButton>
     </form>
