--- a/app/templates/experience/show/tree/edit.hbs
+++ b/app/templates/experience/show/tree/edit.hbs
@@ -27,7 +27,7 @@
 
     {{outlet}}
 
-    <div>
+    <div class="au-u-margin-top-small">
       <strong>Type</strong> {{@model.treeNode.criterionType}}
     </div>
 
