--- a/app/components/radio-buttons.hbs
+++ b/app/components/radio-buttons.hbs
@@ -1,1 +1,3 @@
-{{yield (component "radio-button" name="radios" choose=(fn this.select) selected=@selected)}}
+<ul class="au-c-list-radio">
+  {{yield (component "radio-button" name="radios" choose=(fn this.select) selected=@selected)}}
+</ul>
