--- a/app/styles/_shame.scss
+++ b/app/styles/_shame.scss
@@ -280,3 +280,33 @@
     margin-top: $au-unit;
   }
 }
+
+// Radio button list
+.au-c-list-radio {
+
+}
+
+.au-c-list-radio__item {
+  & + & {
+    margin-top: $au-unit-tiny/2;
+    padding-top: $au-unit-tiny/2;
+    border-top: .1rem dotted $au-gray-200;
+  }
+}
+
+.au-c-list-radio__button {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+
+  input {
+    position: relative;
+    top: -.2ex;
+  }
+}
+
+.au-c-list-radio__label {
+  @include au-font-size($au-h6);
+  flex-grow: 1;
+  padding-left: $au-unit-tiny;
+}
