--- a/app/templates/experience/show/tree/edit.hbs
+++ b/app/templates/experience/show/tree/edit.hbs
@@ -45,6 +45,10 @@
       <p>
         <AuLabel for="comment">Comment</AuLabel>
         <AuInput id="comment" @value={{this.currentComment}} @placeholder="" />
+        <AuLabel for="commentUrlText">Comment link text</AuLabel>
+        <AuInput id="commentUrlText" @value={{this.currentCommentLinkText}} @placeholder="" />
+        <AuLabel for="commentUrl">Comment link URL</AuLabel>
+        <AuInput id="commentUrl" @value={{this.currentCommentLinkUrl}} @placeholder="" />
       </p>
       <AuButton type="submit" {{on "click" this.submit}}>Instellen</AuButton>
     </form>
