--- a/app/templates/developers/styling.hbs
+++ b/app/templates/developers/styling.hbs
@@ -2,7 +2,7 @@
 <p>U kan een aantal design elementen (kleuren, typografie) aanpassen door deze mee te geven in de widget code.</p>
 
 <CodeBlock @code='<script
-  src="https://qa.toegankelijk.vlaanderen.be/widget.js"
+  src="https://toegankelijk.vlaanderen.be/widget.js"
   resource="[uri voor jouw gebouw-widget]"
   typeof="http://data.toegankelijk.vlaanderen.be/ns/Widget"
   data-style-check="#0E5EB8"
