--- a/app/templates/contact.hbs
+++ b/app/templates/contact.hbs
@@ -9,7 +9,7 @@
         {{contact-form}}
         <AuContactForm/>
         <AuContent class="au-u-margin-top-large">
-          <p>Of neem rechtstreeks contact op via mail <a href="mailto:toevla@inter.vlaanderen" class="au-c-link">toevla@inter.vlaanderen</a>.</p>
+          <p>Of neem rechtstreeks contact op via mail <a href="mailto:toegankelijk@vlaanderen.be" class="au-c-link">toegankelijk@vlaanderen.be</a>.</p>
         </AuContent>
       </div>
     </section>
