--- a/app/templates/developers/plaatsing.hbs
+++ b/app/templates/developers/plaatsing.hbs
@@ -6,7 +6,7 @@
 <p>Om de vindbaarheid van informatie over toegankelijkheid makkelijker te maken is het goed om deze altijd onder de <CodeInline @code='/toegankelijkheid' @language="html" /> pagina te plaatsen op uw website. Zo creëren we samen een makkelijk vindbare locatie op je site.</p>
 
 <AuHeading @level="3" @skin="3">Controleer op tegenstrijdige informatie</AuHeading>
-<p>Als uw pagina reeds een pagina over toegankelijkheid hebt controleer u best even de correctheid van de informatie. Het kan zeer verwarrend overkomen indien de info op uw pagina de widget informatie tegenspreekt. We streven ernaar om steeds de meest correct info te geven. Indien u toch een fout zou vinden in de widget kan u deze steeds doorgeven op <a href="mailto:toevla@inter.vlaanderen" class="au-c-link">toevla@inter.vlaanderen</a>.</p>
+<p>Als uw pagina reeds een pagina over toegankelijkheid hebt controleer u best even de correctheid van de informatie. Het kan zeer verwarrend overkomen indien de info op uw pagina de widget informatie tegenspreekt. We streven ernaar om steeds de meest correct info te geven. Indien u toch een fout zou vinden in de widget kan u deze steeds doorgeven op <a href="mailto:toegankelijk@vlaanderen.be" class="au-c-link">toegankelijk@vlaanderen.be</a>.</p>
 
 <AuHeading @level="3" @skin="3">Controleer op dubbele informatie</AuHeading>
 <p>Met de widget geven we je een makkelijk overzicht van alle meetpunten rond toegankelijkheid. Het is dus niet nodig om deze nog eens te herhalen op je site. U kan wel altijd een kort overzicht of visie tekst op deze pagina plaatsen om de toegankelijkheids-‘troeven’ van de locatie samen te vatten en/of uw engagement rond toegankelijkheid duidelijk te maken. </p>
@@ -15,5 +15,5 @@
 <p>Het is belangrijk dat er een bezoeker van je site de pagina over toeganklijkheid makkelijk kan vinden. Plaats deze link zichtbaar in uw hoofdnavigatie of footernavigatie.</p>
 
 <AuHeading @level="3" @skin="3">Vragen of hulp nodig?</AuHeading>
-<p>Indien u problemen tegenkomt bij het implementeren van de widget kan je ons contacteren op <a href="mailto:toevla@inter.vlaanderen" class="au-c-link">toevla@inter.vlaanderen</a>.</p>
+<p>Indien u problemen tegenkomt bij het implementeren van de widget kan je ons contacteren op <a href="mailto:toegankelijk@vlaanderen.be" class="au-c-link">toegankelijk@vlaanderen.be</a>.</p>
 <p>Bugs of issues met de widget kan u melden op de <a href="https://github.com/lblod/frontend-toevla/issues" target="_blank" rel="noopener noreferrer" class="au-c-link">github pagina</a> van het project.</p>
